--- a/front-end/src/components/App/App.scss
+++ b/front-end/src/components/App/App.scss
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+@import '../../styles/global';
+
+@keyframes pulse-animation {
+  0% {opacity: 0};
+  50% {opacity: 1};
+  100% {opacity: 0};
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  background-color: $layout-secondary-color;
+  padding: 2vh 17vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 100vw;
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+  &__header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    &-title{
+      position:absolute;
+      width: 25vw;
+      top: -1vw;
+      animation: pulse-animation 2s ease-in-out infinite;
+    }
+
+    &-logo{
+      width: 25vw;
+    }
   }
 }
