--- a/front-end/src/components/QuizLaunch/QuizLaunch.scss
+++ b/front-end/src/components/QuizLaunch/QuizLaunch.scss
@@ -37,6 +37,7 @@
 
             &:hover {
                 cursor: pointer;
+                background-color: $layout-highlight-offset-color;
             }
         }
     }
